[tool]
[tool.poetry]
name = "loomxpy"
version = "0.2.0"
homepage = "https://github.com/aertslab/loomxpy"
description = "Top-level package for LoomXpy."
authors = ["Maxime De Waegeneer <mdewaegeneer@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8']

packages = [
    { include = "loomxpy" },
    { include = "tests", format = "sdist" }]

[tool.poetry.dependencies]
python = ">=3.6"
click = "*"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"
black = "*"
mypy = "*"

[tool.poetry.scripts]
loomxpy = 'loomxpy.cli:main'

[tool.black]
line-length = 88
target-version = ['py38']

[mypy]
python_version = 3.8

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
