[tool]
[tool.poetry]
name = "loomxpy"
version = "0.4.1"
homepage = "https://github.com/aertslab/loomxpy"
description = "Top-level package for LoomXpy."
authors = ["Maxime De Waegeneer <mdewaegeneer@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8']

packages = [
    { include = "loomxpy" },
    { include = "tests", format = "sdist" }]

[tool.poetry.dependencies]
python = ">=3.7.1"
click = "*"
numpy = "^1.20.2"
pandas = "^1.2.4"
loompy = "^3.0.6"
scikit-learn = "^0.24.2"
pyscenic = "^0.11.1"
dataclasses-json = "^0.5.3"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "^4.4.2"
flake8 = "^3.8.4"
invoke = "^1.5.0"
isort = "^4.3.21"
pylint = "^2.6.2"
pytest = "^4.6.11"
tox = "^3.12.1"
yapf = "^0.30.0"
black = "^20.8b1"
mypy = "0.812"
Sphinx = "^3.5.4"

[tool.poetry.scripts]
loomxpy = 'loomxpy.cli:main'

[tool.black]
line-length = 88
target-version = ['py38']

[mypy]
python_version = 3.8

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
